Global Russian Translation Fix! 1.05.2021
Global Russian translation fix! 1.05.2021
It's very important !!!

--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -24,7 +24,8 @@ o_seed_modification_possibility_only_set
 
 o_seed_modification_possibility_only_set_descr
 {
-"Установка игрового сида позволит играм только с AI играть точно так же, если используются те же настройки карты. Для игр с AI, он обеспечит такие же условия запуска на карте (например, выбор AIV). Для установки игрового сида, включите эту опцию и создайте файл под названием "live" с 6-значным номером в каталоге установки игры/игр. ВНИМАНИЕ: Эта функция работает только после перезапуска игры!"
+"Установка игрового сида позволит играм только с AI играть точно так же, если используются те же настройки карты. Для игр с AI, он обеспечит такие же условия запуска на карте (например, выбор AIV). Для установки игрового сида, включите эту опцию и создайте файл под названием (live) с 6-значным номером в каталоге установки игры/игр. 
+ВНИМАНИЕ: Эта функция работает только после перезапуска игры!"
 }
 
 o_seed_modification_possibility
@@ -124,7 +125,7 @@ o_stop_player_keep_rotation
 
 o_stop_player_keep_rotation_descr
 {
-"Крепость игрока вращяется таким же образом как и крепости ИИ. Точней стоит лицом к костру ИИ , а другой стороной к краю карты"
+"Крепость игрока вращяется таким же образом как и крепости AI. Точней стоит лицом к костру AI , а другой стороной к краю карты"
 }
 
 o_restore_arabian_engineer_speech
@@ -156,7 +157,7 @@ fix_apple_orchard_build_size
 
 fix_apple_orchard_build_size_descr
 {
-"Изменяет размер постройки яблоневого сада на размер, который он занимает после расположение фермы. Это экономит место при строительстве ферм и увеличивает скорость, с которой AI может располагать эти фермы."
+"Изменяет размер постройки яблоневого сада на размер который он занимает после расположение фермы. Это экономит место при строительстве ферм и увеличивает скорость, с которой AI может располагать эти фермы."
 }
 
 u_fix_applefarm_blocking
@@ -217,7 +218,7 @@ ai_fix_crusader_archers_pitch
 
 ai_fix_crusader_archers_pitch_descr
 {
-"Исправляет, что AI-европейские лучники не зажигают рвы, как арабские лучники, когда на них попадают вражеские юниты."
+"Исправляет, что (AI) европейские лучники не зажигают рвы, как арабские лучники, когда на них попадают вражеские юниты."
 }
 
 o_fix_baker_disappear
@@ -227,7 +228,7 @@ o_fix_baker_disappear
 
 o_fix_baker_disappear_descr
 {
-"Исправляет ошибку, при которой пекарни исчезали бы, если бы они не нашли муку в куче запасов по месту назначения."
+"Исправляет ошибку, при которой пекарни исчезали бы, если бы пекари не нашли муку на складе запасов ."
 }
 
 o_fix_moat_digging_unit_disappearing
@@ -242,7 +243,7 @@ o_fix_moat_digging_unit_disappearing_descr
 
 ui_welcometext
 {
-"Это не оффициальный патч для Stronghold Crusader.
+"Это неофициальный патч для Stronghold Crusader.
 Проект доступен в виде открытого исходного кода по адресу [GitHub](https://github.com/Sh0wdown/UnofficialCrusaderPatch).
 
 Любая версия Crusader потенциально поддерживается, но так как изменения были получены из версии 1.41 Steam-Version, могут появиться несовместимости.
@@ -269,6 +270,7 @@ ui_welcometext
 Переводчики
 [Lutel (YouTube)](https://www.youtube.com/user/MrLutel05) (Polish)  
 [Lolasik011](https://github.com/Lolasik011),(Steam - YouMoMCallME) (Russian)  
+[LORD_VALROY](LORD_VALROY#0519 Discord),(https://vk.com/club_gmb_mod) (Russian)
 [Skysoul (e-mail)](mailto:theskysoul@vip.qq.com) (Chinese)  
 [Liegav (YouTube)](https://www.youtube.com/channel/UCFqQMKfYgGb7iFKJagQl_wA) (Hungarian)
 
@@ -325,7 +327,7 @@ o_shfy_beer_descr
 
 o_shfy_religion
 {
-	"Бонус за популярность от собора и церкви"
+	"Бонус за популярность от собора налогов и церкви"
 }
 
 o_shfy_religion_descr
@@ -360,27 +362,27 @@ o_armory_marketplace_weapon_order_fix
 
 o_armory_marketplace_weapon_order_fix_descr
 {
-	"Заказывает иконки оружия в Оружейной и на Рынке, чтобы иметь тот же самый заказ. Также перемещает кожаную броню между булавой и арбалетом, а металлическую броню - между пиками и мечом для более легкого доступа во время прокрутки предметов на Рынке."
+	"Изменение порядка иконок оружия в Оружейной и на Рынке, чтобы они располагались в одинаковом порядке. Также перемещает кожаную броню между булавой и арбалетом, а металлическую броню - между пиками и мечом для более легкого доступа во время прокрутки предметов на Рынке."
 }
 
 ai_fix_laddermen_with_enclosed_keep
 {
-    "Исправить AI, не использующий лестниц, если они прилагаются."
+    "Исправить AI, не использующий лестниц, если они есть в наличии."
 }
 
 ai_fix_laddermen_with_enclosed_keep_descr
 {
-    "AI (в частности, Змея) больше не прекращает использование Лестниц с их блоками осады, если их содержание находится в замкнутом пространстве."
+    "AI (в частности, Змея) больше не прекращает использование Лестниц с их блоками осады, если они находится в замкнутом пространстве."
 }
 
 o_override_identity_menu
 {
-    "Переопределить меню "Настройка идентификации", добавляя новые функции."
+    "Переопределить меню "Set-up Identity", добавляя новые функции."
 }
 
 o_override_identity_menu_descr
 {
-    "В меню "Настройка идентификации" добавляется "Диапазон" и "Выбор единиц измерения". ТОЛЬКО ДЛЯ ОБЫЧНОГО ИГРОВОГО РЕЖИМА!"
+    "Добавляет выбор юнитов дальнего и ближнего боя в меню Set-up Identity". ТОЛЬКО ДЛЯ ОБЫЧНОГО ИГРОВОГО РЕЖИМА!"
 }
 
 o_default_multiplayer_speed
@@ -410,7 +412,7 @@ ui_browsepath
 
 ui_aicoldversion
 {
-	"Обнаружена старая версия. Нажмите, чтобы конвертировать"
+	"Обнаружена старая версия. Нажмите чтобы конвертировать"
 }
 
 ui_aicofferconvert
@@ -490,12 +492,12 @@ Name
 
 u_ArabXBow
 {
-	"Увеличенная броня арабского мечника против выстрела арбалетчика"
+	"Увеличенная броня арабского мечника против стрел арбалетчика"
 }
 
 u_arabxbow_descr
 {
-	" - Арабские мечники только умирают после 6 выстрелов из арбалета вместо 3"
+	" - Арабские мечники умирают после 6 стрел из арбалета вместо 3"
 }
 
 u_ArabWall
@@ -506,18 +508,18 @@ u_ArabWall
 u_ArabWall_descr
 {
 	"В Ваниле арабские мечники разрушают стены медленнее любого другого подразделения ближнего боя.
-С этой опцией скорость удара против стен примерно удваивается для них,поставив их немного выше копейщиков."
+С этой опцией скорость удара (анимации) против стен удваивается для них,поставив их немного выше копейщиков. (по скорости анимации атаки)"
 }
 
 u_spearmen
 {
-	"Увеличенная броня копейщиков против дальних юнитов"
+	"Увеличенная броня копейщиков против урона дальних юнитов"
 }
 
 u_spearmen_descr
 {
-	" - Копейщики умирают только после 5 стрел, вместо 3
-  - Копейщики едва выдержали один выстрел арбалета, вместо того,чтобы получить одноразовый"
+	" - Копейщики умирают после 5 попаданий стрел из лука, вместо 3
+  - Копейщики едва выдерживали один выстрел из арбалета, вместо того чтобы умереть от одного выстрела"
 }
 
 ui_error
@@ -622,6 +624,7 @@ o_gamespeed_descr
   - От 10 до 90 с интервалом 5
   - от 90 до 200 с интервалом 10
   - от 200 до 1000 с интервалом в 100
+   - от 1100 - 9000 (Но после 1100 уже не происходит увеличение) 
 Новые значения доступны только с помощью клавиш + -, ползунка в &
 меню игры остается неизменным."
 }
@@ -648,7 +651,7 @@ ui_other
 
 o_responsivegates
 {
-	"Быстрая реакция врагов на врагов"
+	"Быстрая реакция юнитов на врагов"
 }
 
 o_responsivegates_descr
@@ -690,7 +693,7 @@ u_laddermen
 u_laddermen_descr
 {
 	" - Крестияне с лестницами умирают после 12 стрел  вместо 5
-  - Крестияне с лестницами умирают после 5 выстрелов арбалетов или пращников & вместо 2
+  - Крестияне с лестницами умирают после 5 выстрелов арбалетов или пращников вместо 2
   - Крестияне с лестницами стоят 20 золотых вместо 4"
 }
 
@@ -727,8 +730,7 @@ ai_demolish_walls_descr
 ai_demolish_eco_descr
 {
 	"Если AI чуствует прессинг, он начинает разрушать свою экономику или &
-фортификационные здания, чтобы получить быстрые деньги для войск. Эта функция иногда &
-кажется, запускается без какой-либо причины."
+фортификационные здания, чтобы получить быстрые деньги для сбора войск."
 }
 
 ai_tethers
@@ -764,7 +766,7 @@ ai_nosleep
 ai_nosleep_descr
 {
 	"AI обычно ставит свои обрабатывающие здания в сон, &
-поскольку необходимый ресурс отсутствует. Это делается без учета потери продуктов, &
+поскольку необходимый ресурс отсутствует. Это делается без учета потери продуктов, и оружия
 которые находятся на пути в Оружейную. Эта функция может быть полностью отключена здесь."
 }
 
@@ -800,8 +802,7 @@ o_moatvisibility
 
 o_moatvisibility_descr
 {
-	"Ваш собственный,но не выкопанный ров всегда будет показан с этой опцией, даже 
-если вы отмените выбор размещения рва."
+	"Ваш собственный,но не выкопанный ров всегда будет показан с этой опцией, даже если вы отмените выбор размещения рва."
 }
 
 o_engineertent
@@ -811,9 +812,8 @@ o_engineertent
 
 o_engineertent_descr
 {
-	"С помощью этой настройки игра не отменяет выбранное вами осадное оборудование 
-после размещения больше одной палатки. Таким образом вы можете создать несколько палаток за другим,
-без необходимости повторного выбора одного и того же осадного оборудования."
+	"С помощью этой настройки игра не отменяет выбранное вами осадное оборудование после размещения больше одной палатки
+Таким образом вы можете создать несколько палаток одну за другим,без необходимости повторного выбора одного и того же осадного оборудования."
 }
 
 
@@ -848,13 +848,13 @@ o_freetrader
 
 o_freetrader_descr
 {
-	"Поскольку АI иногда играет сам, когда он вне леса и его рынок уничтожен. &
+	"Поскольку АI иногда играет сам, когда он находится далеко от леса и его рынок уничтожен. &
  С этим параметром рынок станет бесплатным, чтобы предотвратить это."
 }
 
 ai_towerengines
 {
-	"Нет лимита на осадные машины на вышках"
+	"Нет лимита на осадные машины на башнях"
 }
 
 ai_towerengines_descr
@@ -870,8 +870,8 @@ ai_buywood
 
 ai_buywood_descr
 {
-	"Чтобы воры не могли украсть древесину которую АI только что купил для &
-	здания,2 единицы дополнительной деревесины теперь будет покупать для каждого здания."
+	"Чтобы воры не могли украсть древесину которую АI только что купил для здания
+	 2 единицы дополнительной деревесины теперь будет покупать для каждого здания."
 }
 
 o_keys
@@ -945,7 +945,7 @@ ai_attacktarget_weakest_descr
 {
 	"С этим параметром все лорды AI выберут свою следующую цель атаки. &
 Это предотвращает переключение войск во время штурма замка, а также отправку &
-их мимо замков других врагов, чтобы собрать."
+их мимо замков других врагов."
 }
 
 
@@ -999,10 +999,10 @@ o_healer
 
 o_healer_descr
 {
-	"Целитель,здания аптеки теперь активно ищет раненых солдат,жителей и жывотных чтобы исцелить их.&
+	"Целитель,здания аптеки теперь активно ищет раненых солдат,жителей и жывотных чтобы исцелить их.
 	Ближайшие цели обрабатываются первыми. Проигрывается анимация ,и он исцеляет за 1/3 секунды &
 	здоровье копейщика. Когда Целитель прогуливается он может разсеять облако чумы которое он заметит &
-	Он будет лечить в одной области замка всех пока не вылечет до конца, а только потом он перейдет к &
+	Он будет лечить в одной области замка всех пока не вылечет до конца, а только потом он перейдет к 
 	другому участку замка.Также он не начнет разсеивать облака чумы пока он не сходит в сады."
 }
 
@@ -1058,7 +1058,7 @@ ai_access
 ai_access_descr
 {
 	"Предотвращает AI от разрушения зданий без доступа. Это должно &
-остановить AI от непрерывного разрушения и восстановления зданий, где нет
+остановить AI от непрерывного разрушения и восстановления зданий,где нет
 доступа к ним."
 }
 
@@ -1069,10 +1069,10 @@ ai_attackwave
 
 ai_attackwave_descr
 {
-	"AI в атаке в ванили посылает сразу столько же войск, как и & 
-тогда когда стены целые.Это заставляет единицы умирать в маленьких волнах &
+	"AI в атаке в ванили посылает сразу столько же войск, как и тогда 
+когда стены целые.Это заставляет единицы умирать в маленьких волнах &
 когда у целевого замка много зданий прямо у его стен. Этот вариант позволяет &
-подразделениям атаковать гражданские & и фортификационные здания, &
+подразделениям атаковать гражданские и фортификационные здания, &
 а также стены, которые уже атакованы одной единицей. Более того,
 AI посылает больше войск к вражескому лорду, как только обнаруживает нарушение."
 }
