--- a/UnofficialCrusaderPatch/Localization/Chinese.txt
+++ b/UnofficialCrusaderPatch/Localization/Chinese.txt
@@ -1,5 +1,5 @@
 // ======================
-//         dev
+//         2.15
 // ======================
 u_spearmen_run
 {
@@ -245,7 +245,7 @@ ui_welcometext
 该项目在github上开源:
 [GitHub](https://github.com/Sh0wdown/UnofficialCrusaderPatch).
 
-通常来说，这个编辑器支持所有游戏版本。但是该编辑器是基于steam上1.41版本制作的，使用更低版本可能会出错。建议使用英文的游戏版本，其他语言的游戏版本可能有部分编辑器功能无法使用。
+通常来说，这个编辑器支持所有游戏版本。但是该编辑器是基于steam上1.41版本制作的，使用更低版本可能会出错。
 安装补丁时若出现问题，会弹出错误信息。
 安装补丁时的UCP版本会显示在游戏主菜单界面的左下角，游戏版本号的右边。
 在安装补丁之前，编辑器会自动备份原始文件。你可以通过'复原'按钮来取消更改，也可以手动更改备份文件的后缀名来复原。
@@ -256,14 +256,16 @@ UCP制作团队
 [Sh0wdown](https://github.com/Sh0wdown)  
 
 项目负责
-[Kimberly](https://github.com/ByBurton/)  
+[Kimberly Azula](https://github.com/ByBurton/)  
 [Krarilotus (Youtube)](https://www.youtube.com/channel/UCMXHqa2vmclSoSkuCu_q5rw)
 
 协力制作
 [LordHansCapon](https://github.com/LordHansCapon)  
 [np123](https://github.com/patel-nikhil)  
-[J-T-de](https://github.com/J-T-de)  
-[Chaf1812](https://github.com/Chaf1812)  
+[J-T-de](https://github.com/J-T-de)
+[gynt](https://github.com/gynt)
+[Le spec](https://github.com/LeSpec)  
+[Chaf1812](https://github.com/Chaf1812)
 
 翻译提供者
 [Lutel (YouTube)](https://www.youtube.com/user/MrLutel05) (波兰语)  
@@ -287,8 +289,6 @@ for the creation of the Stronghold series
 [GRhin](https://www.twitch.tv/grhin)  
 [Heroesflorian](https://github.com/Heroesflorian)"
 }
-
-
 
 // ======================
 //         2.14
@@ -1061,23 +1061,6 @@ ai_moredef_descr
 需要注意的是，打开此选项后，会导致这三个ai的初次进攻时间延后。"
 }
 
-aiv_tatha
-{
-	"Tatha的ai提升城堡"
-}
-
-aiv_tatha_descr
-{
-	"ai将会拥有比原版更加强大的城堡，每个ai不同样式的城堡拥有同等的强度&
-[Presentation-Playlist](https://www.youtube.com/playlist?list=PLvxeAM4gClqDoMU8i8WnTsZ4x8b1vIkTM)"
-}
-
-
-
-
-// some edits:
-
-
 ai_attackwave
 {
 	"提升ai的进攻"
@@ -1086,54 +1069,4 @@ ai_attackwave
 ai_attackwave_descr
 {
 	"在原版中，ai在进攻时，只会派出能够得着城墙的数量的士兵，比如说一圈城堡有50格城墙，那么只有50个人可以在不重叠的情况下砍城墙，此时哪怕有100名士兵集结在敌人城堡附近，也只会派出50人前去攻击城堡，打开此选项后将可以避免此现象。并且，打开此选项后，ai的士兵将会主动攻击城堡建筑和经济建筑。此外，ai将会派出更多的士兵去攻击敌人的领主。"
-}
-
-aiv_pitchsiege
-{
-	"PitchNeeded的加强ai城堡 (射石机和巨弩)"
-}
-
-aiv_pitchsiege_descr
-{
-	"为猪，维奇尔，埃米尔，尼泽尔添加了更多的射石机和巨弩。创作者&
-[PitchNeeded](https://github.com/PitchNeeded)."
-}
-
-
-aiv_PitchWells
-{
-	"PitchNeeded的加强ai城堡 (水井和水缸)"
-}
-
-aiv_PitchWells_descr
-{
-	"为原版ai城堡添加了一些水井和水缸。创作者&
-[PitchNeeded](https://github.com/PitchNeeded)."
-}
-
-
-// no edits, just formatting:
-
-
-
-aiv_evreyimproved
-{
-	"Evrey的加强ai城堡"
-}
-
-aiv_evreyimproved_descr
-{
-	"为ai添加了原版风格但更强劲的城堡&
-[创作者Evrey](https://github.com/Evrey/SHC_AIV/)"
-}
-
-aiv_evreyfixed
-{
-	"Evrey的原版修复城堡"
-}
-
-aiv_evreyfixed_descr
-{
-	"修复了原版ai城堡的一些问题，诸如茅房不足，建筑无通路等&
- [创作者Evrey](https://github.com/Evrey/SHC_AIV/)"
 }
