Removed Lord Valroy from the credits and minor fixed 7.05.2021
Removed Lord Valroy from the creditsa and minor fixed  7.05.2021

--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -24,7 +24,7 @@ o_seed_modification_possibility_only_set
 
 o_seed_modification_possibility_only_set_descr
 {
-"Установка игрового сида позволит играм только с AI играть точно так же, если используются те же настройки карты. Для игр с AI, он обеспечит такие же условия запуска на карте (например, выбор AIV). Для установки игрового сида, включите эту опцию и создайте файл под названием (live) с 6-значным номером в каталоге установки игры/игр. 
+"Установка игрового сида позволит играм только с AI играть точно так же, если используются те же настройки карты. Для игр с AI он обеспечит такие же условия запуска на карте (например, выбор AIV). Для установки игрового сида включите эту опцию и создайте файл под названием (live) с 6-значным номером в каталоге установки игры/игр. 
 ВНИМАНИЕ: Эта функция работает только после перезапуска игры!"
 }
 
@@ -35,7 +35,7 @@ o_seed_modification_possibility
 
 o_seed_modification_possibility_descr
 {
-"Эта опция сохранит сид от игр, которые не имеют "live" сида, так что вы можете переименовать их в "live", чтобы потом воссоздать матч."
+"Эта опция сохранит сид от игр которые не имеют "live" сида, так что вы можете переименовать их в "live" чтобы потом воссоздать матч."
 }
 
 ai_recruitstate_initialtimer
@@ -45,7 +45,7 @@ ai_recruitstate_initialtimer
 
 ai_recruitstate_initialtimervalue_descr
 {
-"Установите это значение на количество месяцев, в течение которых AI будет вербовать исключительно войска обороны, если только он уже не заполнил всю оборону."
+"Установите это значение на количество месяцев в течение которых AI будет вербовать исключительно войска обороны, если только он уже не заполнил всю оборону."
 }
 
 ai_defense
@@ -65,12 +65,12 @@ ai_housing
 
 build_housing_descr
 {
-"Количество дополнительного доступного жилья до того, как AI прекратит строительство домов"
+"Количество дополнительного доступного жилья до того как AI прекратит строительство домов"
 }
 
 campfire_housing_descr
 {
-"Количество крестьян у костра перед тем, как AI остановит строительство домов."
+"Количество крестьян у костра перед тем как AI остановит строительство домов."
 }
 
 delete_housing
@@ -80,7 +80,7 @@ delete_housing
 
 delete_housing_descr
 {
-"Когда эта опция выбрана, AI никогда не будет удалять дома"
+"Когда эта опция выбрана AI никогда не будет удалять дома"
 }
 
 aiv_prompt
@@ -157,7 +157,7 @@ fix_apple_orchard_build_size
 
 fix_apple_orchard_build_size_descr
 {
-"Изменяет размер постройки яблоневого сада на размер который он занимает после расположение фермы. Это экономит место при строительстве ферм и увеличивает скорость, с которой AI может располагать эти фермы."
+"Изменяет размер постройки яблоневого сада на размер который он занимает после расположение фермы. Это экономит место при строительстве ферм, и увеличивает скорость с которой AI может располагать эти фермы."
 }
 
 u_fix_applefarm_blocking
@@ -167,7 +167,7 @@ u_fix_applefarm_blocking
 
 u_fix_applefarm_blocking_descr
 {
-"Яблочные фермеры больше нельзя блокировать, размещая здания в верхней левой части фермы."
+"Яблочные фермеры больше нельзя блокировать размещая здания в верхней левой части фермы."
 }
 
 o_increase_path_update_tick_rate
@@ -177,7 +177,7 @@ o_increase_path_update_tick_rate
 
 o_increase_path_update_tick_rate_descr
 {
-"В ваниле, это заняло 200 игровых тиков, чтобы проверить новые пути, часто останавливая юнитов, чтобы перейти в замок после уничтожения ворот или башни немедленно.
+"В ваниле это заняло 200 игровых тиков ,чтобы проверить новые пути часто останавливая юнитов чтобы перейти в замок после уничтожения ворот или башни немедленно.
  Доступность рассчитывается теперь каждые 50 игровых тиков, что позволяет юнитам реализовывать новые пути быстрее."
 }
 
@@ -198,7 +198,7 @@ u_tanner_fix
 
 u_tanner_fix_descr
 {
-"Кожевники больше не вернутся без коровы, когда другой кожевник забрал их целевую корову. Вместо этого они немного подождут, а потом возьмут еще одну корову."
+"Кожевники больше не вернутся без коровы когда другой кожевник забрал их целевую корову. Вместо этого они немного подождут, а потом возьмут еще одну корову."
 }
 
 o_fix_fletcher_bug
@@ -218,7 +218,7 @@ ai_fix_crusader_archers_pitch
 
 ai_fix_crusader_archers_pitch_descr
 {
-"Исправляет, что (AI) европейские лучники не зажигают рвы, как арабские лучники, когда на них попадают вражеские юниты."
+"Исправляет, что (AI) европейские лучники не зажигают рвы, как арабские лучники когда на них попадают вражеские юниты."
 }
 
 o_fix_baker_disappear
@@ -228,7 +228,7 @@ o_fix_baker_disappear
 
 o_fix_baker_disappear_descr
 {
-"Исправляет ошибку, при которой пекарни исчезали бы, если бы пекари не нашли муку на складе запасов ."
+"Исправляет ошибку при которой пекарни исчезали бы, если бы пекари не нашли муку на складе запасов ."
 }
 
 o_fix_moat_digging_unit_disappearing
@@ -238,7 +238,7 @@ o_fix_moat_digging_unit_disappearing
 
 o_fix_moat_digging_unit_disappearing_descr
 {
-"Исправлена ошибка, при которой копатели рва исчезали случайно во время раскопок. Обратите внимание, что они все равно могут исчезнуть, если вы прикажете им двигаться во время раскопок, и они случайно встанут на непешеходную плитку!"
+"Исправлена ошибка при которой копатели рва исчезали случайно во время раскопок. Обратите внимание что они все равно могут исчезнуть, если вы прикажете им двигаться во время раскопок, и они случайно встанут на непешеходную плитку!"
 }
 
 ui_welcometext
@@ -270,7 +270,6 @@ ui_welcometext
 Переводчики
 [Lutel (YouTube)](https://www.youtube.com/user/MrLutel05) (Polish)  
 [Lolasik011](https://github.com/Lolasik011),(Steam - YouMoMCallME) (Russian)  
-[LORD_VALROY](LORD_VALROY#0519 Discord),(https://vk.com/club_gmb_mod) (Russian)
 [Skysoul (e-mail)](mailto:theskysoul@vip.qq.com) (Chinese)  
 [Liegav (YouTube)](https://www.youtube.com/channel/UCFqQMKfYgGb7iFKJagQl_wA) (Hungarian)
 
@@ -352,7 +351,7 @@ o_shfy_resourcequantity
 
 o_shfy_resourcequantity_descr
 {
-	"Адаптирует перечисленные аспекты в соответствии с Stronghold 1. Внимание: Каждое изменение влияет на повелителей AI, в худшем случае делает их бесполезными!"
+	"Адаптирует перечисленные аспекты в соответствии с Stronghold 1. Внимание: Каждое изменение влияет на Лордов AI, в худшем случае делает их бесполезными!"
 }
 
 o_armory_marketplace_weapon_order_fix
@@ -367,12 +366,12 @@ o_armory_marketplace_weapon_order_fix_descr
 
 ai_fix_laddermen_with_enclosed_keep
 {
-    "Исправить AI, не использующий лестниц, если они есть в наличии."
+    "Исправляет AI который не использовал лестниц, если они есть в наличии."
 }
 
 ai_fix_laddermen_with_enclosed_keep_descr
 {
-    "AI (в частности, Змея) больше не прекращает использование Лестниц с их блоками осады, если они находится в замкнутом пространстве."
+    "AI (в частности, Змея) больше не прекращает использование Лестниц с остальными Осадными орудиями, если они находится в замкнутом пространстве."
 }
 
 o_override_identity_menu
@@ -407,7 +406,7 @@ u_fireballistafix_descr
 
 ui_browsepath
 {
-	"Пожалуйста, выберите каталог установки Stronghold Crusader."
+	"Пожалуйста выберите каталог установки Stronghold Crusader."
 }
 
 ui_aicoldversion
@@ -609,7 +608,7 @@ ai_attacklimit
 
 ai_attacklimit_descr
 {
-	"Количество дополнительных единиц, которые добавляются после первой атаки &
+	"Количество дополнительных единиц которые добавляются после первой атаки &
 в Ваниле - до 200. Здесь вы можете изменить этот предел."
 }
 
@@ -656,10 +655,9 @@ o_responsivegates
 
 o_responsivegates_descr
 {
-	"Ворота закрывается позже &
-когда опасность исчезнет. Расстояние врага, для которого закрываются ворота &
-будет уменьшено с 200 до 140. Время, после которого ворота открываются, &
-будет уменьшены с 1200 до 100."
+	"Ворота закрывается позже когда опасность исчезнет.
+Расстояние врага для которого закрываются ворота будет уменьшено с 200 до 140.
+Время после которого ворота открываются будет уменьшены с 1200 до 100."
 }
 
 ai_addattack
@@ -669,8 +667,8 @@ ai_addattack
 
 ai_addattack_descr
 {
-	"В Ваниле количество единиц атаки увеличивается на 5 &
-единиц в среднем. Это значение для всех здесь."
+	"В Ваниле количество единиц атаки увеличивается на 5 единиц в среднем.
+Это значение для всех здесь."
 
 }
 
@@ -729,8 +727,8 @@ ai_demolish_walls_descr
 
 ai_demolish_eco_descr
 {
-	"Если AI чуствует прессинг, он начинает разрушать свою экономику или &
-фортификационные здания, чтобы получить быстрые деньги для сбора войск."
+	"Если AI чуствует прессинг он начинает разрушать свою экономику или &
+фортификационные здания чтобы получить быстрые деньги для сбора войск."
 }
 
 ai_tethers
@@ -741,8 +739,8 @@ ai_tethers
 ai_tethers_descr
 {
 	"Как правило, AI строит для каждой новой каменоломни новую привязь &
-независимо от того, сколько привязей уже существует. Здесь это можно отключить, так как &
-это приводит к спаму, если карьеры AI будут уничтожены повторно."
+независимо от того сколько привязей уже существует. Здесь это можно отключить, так как &
+это приводит к спаму если карьеры AI будут уничтожены повторно."
 }
 
 
