added command line functionality for language and path setting + fixed a bug with localization for CLI tool

--- a/UnofficialCrusaderPatch/Localization/English.txt
+++ b/UnofficialCrusaderPatch/Localization/English.txt
@@ -1,4 +1,14 @@
 // ======================
+//         2.15b
+// ======================
+ui_cli_ask_installation_folder
+{
+"No installation found. Please provide the path to your Stronghold Crusader Extreme installation directory!"
+}
+
+
+
+// ======================
 //         2.15
 // ======================
 u_spearmen_run
