--- a/UnofficialCrusaderPatch/Localization/German.txt
+++ b/UnofficialCrusaderPatch/Localization/German.txt
@@ -1,4 +1,15 @@
 // ======================
+//         2.15b
+// ======================
+ui_cli_ask_installation_folder
+{
+"Es wurde keine Stronghold Crusader Extreme Installation gefunden. Bitte gib den Installationspfad an!"
+}
+
+
+
+
+// ======================
 //         2.15
 // ======================
 
