Paraphrased the text a bit and minor fix  22.05.2021
Paraphrased the text a bit  and minor fix 22.05.2021

--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -811,8 +811,8 @@ o_engineertent
 
 o_engineertent_descr
 {
-	"С помощью этой настройки игра не отменяет выбранное вами осадное оборудование после размещения больше одной палатки
-Таким образом вы можете создать несколько палаток одну за другим,без необходимости повторного выбора одного и того же осадного оборудования."
+	"С помощью этой настройки игра не отменяет выбранное вами осадное орудие после размещения больше одной палатки
+Таким образом вы можете создать несколько палаток одну за другим, без необходимости повторного выбора одного, и того же осадного орудия."
 }
 
 
@@ -962,7 +962,7 @@ ai_assaultswitch
 ai_assaultswitch_descr
 {
 	"Лорды AI, которые иногда нападают на самого могущественного или самого слабого врага &
-они переключают свою цель в середине продолжающегося нападения и отправляют свои войска &
+они переключают свою цель в середине продолжающегося нападения, и отправляют свои войска &
 в другой замок. Это предотвращается с помощью этой настройки, как только начался штурм, &
 т. е. на этапе сбора войск перед замком, изменения все еще могут произойти."
 }
@@ -977,7 +977,7 @@ ai_rebuild
 ai_rebuild_descr
 {
 	"AI будет ремонтировать руины башни, слегка поврежденные стены, а также &
-уничтожит инженерные и туннельные гильдии и нефтеперерабатывающие платформы, место сбора которых &
+уничтожит инженерные, и туннельные гильдии и нефтеперерабатывающие платформы место сбора которых &
 все еще существует. Кроме того, AI теперь может строить на платформе сбора &
 карьеров."
 }
@@ -1055,8 +1055,7 @@ ai_access
 
 ai_access_descr
 {
-	"Предотвращает AI от разрушения зданий без доступа. Это должно остановить AI 
-непрерывного разрушения и восстановления зданий где нет доступа к ним."
+	"Предотвращает AI от разрушения зданий без доступа (прохода) к ним. Это должно остановить AI от непрерывного разрушения и восстановления зданий где нет доступа к ним."
 }
 
 ai_attackwave
@@ -1066,7 +1065,7 @@ ai_attackwave
 
 ai_attackwave_descr
 {
-	"AI в атаке в ванили посылает сразу столько же войск, как и тогда когда стены целые. Это заставляет единицы умирать в маленьких волнах
-когда у целевого замка много зданий прямо у его стен. Этот вариант позволяет подразделениям атаковать гражданские и фортификационные здания, а также
-стены которые уже атакованы одной единицей. Более того AI посылает больше войск к вражескому лорду, как только обнаруживает что стена разрушена."
+	"AI в атаке в ванили посылает сразу столько же войск, как и тогда когда стены целые. Это заставляет единицы умирать в маленьких волнах когда у
+целевого замка много зданий прямо у его стен. Этот вариант позволяет подразделениям атаковать гражданские и фортификационные здания, а также стены которые
+уже атакованы одной единицей. Более того AI посылает больше войск к вражескому лорду, как только обнаруживает что стена разрушена."
 }
