--- a/UnofficialCrusaderPatch/Localization/English.txt
+++ b/UnofficialCrusaderPatch/Localization/English.txt
@@ -1,6 +1,7 @@
 // ======================
-//         2.15
+//         DEV
 // ======================
+
 o_fix_rapid_deletion_bug
 {
 "Fix resources rapid deletion"
@@ -10,6 +11,10 @@ o_fix_rapid_deletion_bug_descr
 {
 "Deleting buildings with a fast auto clicker no longer gives resources for more than one deletion."
 }
+
+// ======================
+//         2.15
+// ======================
 
 u_spearmen_run
 {
