--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -125,7 +125,7 @@ o_stop_player_keep_rotation
 
 o_stop_player_keep_rotation_descr
 {
-"Крепость игрока вращяется таким же образом как и крепости AI. Точней стоит лицом к костру AI , а другой стороной к краю карты"
+"Крепость игрока вращается таким же образом как и крепости AI. Точней стоит лицом к костру AI , а другой стороной к краю карты"
 }
 
 o_restore_arabian_engineer_speech
