--- a/UnofficialCrusaderPatch/Localization/English.txt
+++ b/UnofficialCrusaderPatch/Localization/English.txt
@@ -1,6 +1,17 @@
 // ======================
 //         2.15
 // ======================
+
+o_fix_map_sending
+{
+"Sending maps works now"
+}
+
+o_fix_map_sending_descr
+{
+"Reduces the length of the sent map name."
+}
+
 u_spearmen_run
 {
 "Spearmen run by default instead of walking"
