--- a/UnofficialCrusaderPatch/Localization/German.txt
+++ b/UnofficialCrusaderPatch/Localization/German.txt
@@ -2,6 +2,16 @@
 //         2.15
 // ======================
 
+o_fix_map_sending
+{
+"Macht Kartensenden möglich"
+}
+
+o_fix_map_sending_descr
+{
+"Verkürzt die Länge des gesendeten Namens."
+}
+
 u_spearmen_run
 {
 "Speerträger rennen standardmäßig"
