--- a/UnofficialCrusaderPatch/Localization/Arabic.txt
+++ b/UnofficialCrusaderPatch/Localization/Arabic.txt
@@ -83,12 +83,12 @@ delete_housing_descr
 
 aiv_prompt
 {
-"تم الكشف عن وجود خرائط مخصصه, هل تريد أنشاء نسخة احتياطيه "
+"تم الكشف عن وجود خرائط مٌعدلة, هل تريد أنشاء نسخة احتياطيه "
 }
 
 aiv_cli_prompt
 {
-"تم الكشف عن وجود خرائط مٌخصصة, أضغط موافق للحذف أو أختر مجلد لنقل الملفات أليه"
+"تم الكشف عن وجود خرائط مٌعدلة, أضغط موافق للحذف أو أختر مجلد لنقل الملفات أليه"
 }
 
 install_abort_io
@@ -138,12 +138,12 @@ o_restore_arabian_engineer_speech_descr
 
 u_fix_lord_animation_stuck_movement
 {
-"أسترجاع حركة الملك بعد القيام بتدمير المباني"
+"أسترجاع حركة الملك (الذكاء الاصطناعي) بعد القيام بتدمير المباني"
 }
 
 u_fix_lord_animation_stuck_movement_descr
 {
-"أسترجاع حركة الملك الذي يصبح غير قادر على الحركة في بعض الأحيان عندما يتم تدمير المباني وهوة في داخلها"
+"أسترجاع حركة الملك (الذكاء الاصطناعي) الذي يصبح غير قادر على الحركة في بعض الأحيان عندما يتم تدمير المباني وهوة في داخلها"
 }
 
 fix_apple_orchard_build_size
@@ -302,7 +302,7 @@ ui_Resource
 
 ui_aicconflict
 {
-	"conflict and will be ignored"
+	"تعارض, وسيتم تجاهله"
 }
 
 o_shfy
@@ -592,7 +592,7 @@ ai_recruitinterval
 
 ai_recruitinterval_descr
 {
-	"ضبط الفترة المطلوبة لتوظيف العمال على أقل شيء للملوك رات و ريتشارد لذي يزيد من سرعة توظيف العمال"
+	"ضبط الفترة المطلوبة لتوظيف العمال على أقل شيء للملوك (الذكاء الاصطناعي) رات و ريتشارد لذي يزيد من سرعة توظيف العمال"
 }
 
 ai_attacklimit
@@ -731,9 +731,9 @@ ai_tethers
 
 ai_tethers_descr
 {
-	"في العادة, الذكاء الاصطناعي عند بناء مستخرجات الحجارة يقوم بوضع بعض الثيران لكي تنقل الحجارة &
+	"في العادة, الملك (الذكاء الاصطناعي) عند بناء مستخرجات الحجارة يقوم بوضع بعض الثيران لكي تنقل الحجارة &
 فعندما يتم تدمير مستخرجات الحجارة يقوم الذكاء الصناعي بأعادة بناء المستخرجات ووضع ثيران للنقل مع أن الثيران التي تم وضعهن لأول مرة لا تزال موجودة &
-وعند تفعيل هذا الخيار سيتوقف الذكاء الاصطناعي عن وضع الثيران في حال كان هنالك البعض منهن بالقرب من مقلع الحجارة."
+وعند تفعيل هذا الخيار سيتوقف الملك (الذكاء الاصطناعي) عن وضع الثيران في حال كان هنالك البعض منهن بالقرب من مقلع الحجارة."
 }
 
 
@@ -756,7 +756,7 @@ ai_nosleep
 
 ai_nosleep_descr
 {
-	"الذكاء الاصطناعي عادتاّ يقوم بأيقاف العمل في بعض الأعمال, عندما لا تكون الموارد المطلوبة للعمل متوفرة &
+	"الملك (الذكاء الاصطناعي) عادتاّ يقوم بأيقاف العمل في بعض الأعمال, عندما لا تكون الموارد المطلوبة للعمل متوفرة &
 بدون المبالا بالاشياء التي تم تصنيعها وهي في طريقها الى المخازن الخاصة بها مثل الاسلحة الغذاء ...الخ &
 يمكن تعطيل هذا بشكل كامل من هنا"
 }
@@ -772,7 +772,7 @@ ai_nosleep_descr
 
 o_onlyai
 {
-	"تفعيل وضع المشاهدة [محتمل حدوث اخطاء]"
+	"تفعيل وضع المشاهدة (محتمل حدوث اخطاء)"
 }
 
 o_onlyai_descr
@@ -844,7 +844,7 @@ ai_towerengines
 
 ai_towerengines_descr
 {
-	"في العادة الذكاء الاصطناعي يقوم ببناء 3 فقط من الآلات الحربية على الابراج الخاصة به &
+	"في العادة الملك (الذكاء الاصطناعي) يقوم ببناء 3 فقط من الآلات الحربية على الابراج الخاصة به &
 وهذا الحد يمكن الغاءه من هنا"
 }
 
@@ -855,7 +855,7 @@ ai_buywood
 
 ai_buywood_descr
 {
-	"لمنع صانعي السهام من أخذ خشب من الكمية الذي اشتراها الذكاء الاصطناعي لبناء المباني, سيتم شراء كمية خشب أضافية بمقدار 2 لكل مبنى"
+	"لمنع صانعي السهام من أخذ خشب من الكمية الذي اشتراها الملك (الذكاء الاصطناعي) لبناء المباني, سيتم شراء كمية خشب أضافية بمقدار 2 لكل مبنى"
 }
 
 o_keys
@@ -865,8 +865,8 @@ o_keys
 
 o_keys_descr
 {
-	"للتنقل وأيضا أستخدام (WASD)يمكن عند تفعيل هذه الميزة يمكنك استخدام هذا الاحرف &
-(CTRL-S and CTRL-L) هذه الاختصارات لحفظ العبة وتحميل الحفظ"
+	"يمكن عند تفعيل هذه الميزة يمكنك استخدام هذا الاحرف (دبليو, أي, أس, دي) لتحريك الشاشة &
+وأيضا يمكنك استعمال (كونترول + أس,  كونترول + ل) للحفظ وتحميل الحفظ"
 }
 
 
@@ -897,7 +897,7 @@ o_keys_descr
 
 ai_attacktarget
 {
-	"الذكاء الاصطناعي يختار الهدف تلقائيا"
+	"الملك يختار الهدف تلقائيا"
 }
 
 ai_attacktarget_nearest
@@ -950,7 +950,7 @@ ai_attacktarget_weakest_descr
 
 ai_assaultswitch
 {
-	"لن يغير الذكاء الاصطناعي عدوه"
+	"لن يغير الملك عدوه"
 }
 
 ai_assaultswitch_descr
@@ -969,7 +969,7 @@ ai_rebuild
 
 ai_rebuild_descr
 {
-	"عندة تفعيل هذه الميزة سيتمكن الذكاء الاصطناعي من أصلاح الابراج و الجدران المتظررة و المدمرة  &
+	"عندة تفعيل هذه الميزة سيتمكن الملك (الذكاء الاصطناعي) من أصلاح الابراج و الجدران المتظررة و المدمرة  &
 واعادة صنع المهندسين الذين لم يكملو أنشاء الالات الحربية و اعادة أنشاء المصانع و مستخرجات الحجارة و النفط &
 أذا كان المكان لا زال متوفر"
 }
@@ -1033,7 +1033,7 @@ ai_access
 
 ai_access_descr
 {
-	"عند تفعيل هذا الخيار لن يقوم الذكاء الاصطناعي بحذف المباني الذي لا يمكن للعاملين فيها الوصول اليها و اعادة بنائها في نفس المكان"
+	"عند تفعيل هذا الخيار لن يقوم الملك (الذكاء الاصطناعي) بحذف المباني الذي لا يمكن للعاملين فيها الوصول اليها و اعادة بنائها في نفس المكان"
 }
 
 ai_attackwave
@@ -1043,9 +1043,9 @@ ai_attackwave
 
 ai_attackwave_descr
 {
-	"في الاعدادات الاساسية للعبة الذكاء الاصطناعي يقوم بأرسال وحدات الهجوم ب مجاميم  &
+	"في الاعدادات الاساسية للعبة الملك (الذكاء الاصطناعي) يقوم بأرسال وحدات الهجوم ب مجاميم  &
 وهذا المجاميع عند الوصول الى العدو تتفرق لتكوين مجاميع أصغر ليصلو الى الجدران و الابراج التي يمكن الوصول اليها &
 وعندما يكون حول الجدار المستهدف مباني للسكان و مصاني ف هذا الخيار سيمكن الجنود من مواجهة هذه المباني أيضا للوصول الى هدفهم
 وعندما يكتشف النظام وجود ثغرات يمكن للجنود الدخول من خلالها الى قلعة العدو  &
-في هذه الحالة يقوم الذكاء الاصطناعي بأرسال وحدات هجومية للدخول الى قلعة العدو من خلال الثغرة التي تم اكتشافها"
+في هذه الحالة يقوم الملك (الذكاء الاصطناعي) بأرسال وحدات هجومية للدخول الى قلعة العدو من خلال الثغرة التي تم اكتشافها"
 }
